# crasher

./: Cargo.toml  crash-things.sh  readme.md
.github/: dependabot.yml
.github/workflows/: run-crasher.yml
src/: args.rs  checker.rs  client.rs  crasher_error.rs  generators.rs  main.rs  process.rs  util.rs  workload.rs
