[package]
name = "crasher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.14"
chrono = "0.4.41"
rand = "0.9.2"
clap = { version = "4.5.44", features = ["derive"] }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "std",
] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "fs",
] }
qdrant-client = "=1.15.0"
ctrlc = "3.4.7"
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
tonic = "0.12.3"
