[package]
name = "crasher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.16"
chrono = "0.4.42"
rand = "0.9.2"
clap = { version = "4.5.53", features = ["derive"] }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "std",
] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "fs",
] }
qdrant-client = "=1.16.0"
ctrlc = "3.5.1"
log = "0.4.29"
env_logger = "0.11.8"
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tonic = "0.12.3"
reqwest = { version = "0.12.25", features = ["json"] } # for snapshot restore
