[package]
name = "crasher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
thiserror = "2.0.18"
chrono = "0.4.43"
rand = "0.10.0"
clap = { version = "4.5.58", features = ["derive"] }
futures = { version = "0.3.32", default-features = false, features = [
    "async-await",
    "std",
] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", default-features = false, features = [
    "fs",
] }
qdrant-client = "=1.17.0"
ctrlc = "3.5.2"
log = "0.4.29"
env_logger = "0.11.9"
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
tonic = "0.12.3"
reqwest = { version = "0.13.2", features = ["json"] } # for snapshot restore
ahash = "0.8.12"

[profile.release]
lto = "fat"
codegen-units = 1
